syntax = "proto3";

package greeting;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message GreetRequest {
  string first_name = 1;
  string last_name = 2;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc greet(GreetRequest) returns (GreetResponse) {};
  rpc greetManyTimes(GreetRequest) returns (stream GreetResponse) {};
  rpc longGreet(stream GreetRequest) returns (GreetResponse) {};
  rpc greetEveryone(stream GreetRequest) returns (stream GreetResponse) {};
  rpc greetWithDeadline(GreetRequest) returns (GreetResponse) {};
}